--- a/templates/index.html
+++ b/templates/index.html
@@ -42,14 +42,137 @@
                     }
                 });
             });
+
+            $('#tilde').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace(/∼/g, '~');
+                $('#outputText').text(text);
+            })
+
+            $('#comma').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace(/，/g, ',');
+                $('#outputText').text(text);
+            })
+
+            $('#exclamation').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace(/！/g, '!');
+                $('#outputText').text(text);
+            })
+
+            $('#bracket').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace(/（/g, '(');
+                text = text.replace(/）/g, ')');
+                $('#outputText').text(text);
+            })
+
+            $('#triangleBrackets').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace(/</g, '〈');
+                text = text.replace(/>/g, '〉');
+                $('#outputText').text(text);
+            })
+
+            $('#ellipsis').click(function() {
+                var text = $('#inputText').val();
+                text = text.replace('···', '…');
+                text = text.replace('...', '…');
+                $('#outputText').text(text);
+            })
+
+            $('#english').click(function() {
+                var text = $('#inputText').val();
+
+                // 정규식으로 문장을 나누기
+                var sentences = text.split(/(\.|\!|\?|\n)/g);
+                
+                // 각 문장 내의 영어 단어를 괄호로 묶기
+                for (let i = 0; i < sentences.length; i++) {
+                    if (!sentences[i].match(/(\.|\!|\?|\n)/g)) {
+                        sentences[i] = sentences[i].replace(/\b([a-zA-Z\s,]+)\b/g, function(match) {
+                            return '(' + match.trim() + ')';
+                        });
+                    }
+                }
+                
+                // 문장들을 다시 합치기
+                var result = sentences.join('');
+                $('#outputText').text(result);
+            })
+
+            $('#quote').click(function() {
+                var text = $('#inputText').val();
+                let result = '';
+                let inQuote = false;
+
+                for (let i = 0; i < text.length; i++) {
+                    if (text[i] === '“') {
+                        result += '“';
+                        inQuote = true;
+                    } else if (text[i] === '”') {
+                        result += '”'
+                        inQuote = false;
+                    } else if (text[i] === '"') {
+                        result += (inQuote) ? '”' : '“'
+                        inQuote = !inQuote;
+                    } else {
+                        result += text[i];
+                    }
+                }
+                $('#outputText').text(result);
+            })
+            $('#smallQuote').click(function() {
+                var text = $('#inputText').val();
+                let result = '';
+                let inQuote = false;
+
+                for (let i = 0; i < text.length; i++) {
+                    if (text[i] === '‘') {
+                        result += '‘';
+                        inQuote = true;
+                    } else if (text[i] === '’') {
+                        if(i !== 0 && i != text.length-1 && /[a-zA-Z]/.test(text[i - 1]) && /[a-zA-Z]/.test(text[i + 1])) {
+                            result += '\'';
+                        } else {
+                            result += '’'
+                            inQuote = false;
+                        }
+                    } else if (text[i] === '\'') {
+                        if(i !== 0 && i != text.length-1 && /[a-zA-Z]/.test(text[i - 1]) && /[a-zA-Z]/.test(text[i + 1])) {
+                            result += '\'';
+                        } else {
+                            result += (inQuote) ? '’' : '‘'
+                            inQuote = !inQuote;
+                        }
+                    } else {
+                        result += text[i];
+                    }
+                }
+                $('#outputText').text(result);
+            })
         });
+
     </script>
 </head>
 <body>
     <h2>Spell Checker</h2>
+    <button id="tilde"> tilde버튼입니다~</button>
+    <button id="english">english 버튼입니다</button>
+    <button id="quote">quote 버튼입니다</button>
+    <button id="smallQuote">smallQuote 버튼입니다</button>
+    <button id="comma">comma 버튼입니다</button>
+    <button id="exclamation">exclamation 버튼입니다</button>
+    <button id="bracket">bracket 버튼입니다</button>
+    <button id="triangleBrackets">triangleBrackets 버튼입니다</button>
+    <button id="ellipsis">ellipsis 버튼입니다</button>
+    <div></div>
     <textarea id="inputText" rows="10" cols="80"></textarea><br><br>
     <button id="checkButton">Check Spelling</button><br><br>
     <h2>Corrected Text:</h2>
     <div id="outputText" style="white-space: pre-wrap;"></div>
 </body>
 </html>
+
+
