--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clean up</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
+    <link rel="icon" type="images/png" href="{{url_for('static', filename='logo.png')}}">
     {% block extra_css %}
     {% endblock extra_css %}
 </head>
