--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 {% block content %}
     <div class="content">
         <section class="function">
-            <button id="checkButton">맞춤법</button>
+            <button id="copy"><i class="fa-solid fa-angles-left"></i></button>
+            <button id="grammar">맞춤법</button>
             <button id="tilde">~</button>
             <button id="english">(eng)</button>
             <button id="quote">“ ”</button>
@@ -15,10 +16,14 @@
             <button id="comma">,</button>
             <button id="exclamation">!</button>
             <button id="bracket">()</button>
-            <button id="triangleBrackets"><></button>
+            <button id="triangleBracket">〈 〉</button>
             <button id="ellipsis">…</button>
-            <button id="cornerBracket">「」</button>
-            <button id="wrapTextButton">선택()</button>
+            <button id="cornerBracket">「 」</button>
+            <button id="wrapBracket">선택( )</button>
+            <button id="wrapQuoteBracket">선택“ ”</button>
+            <button id="wrapSmallQuoteBracket">선택‘ ’</button>
+            <button id="wrapTriangleBracket">선택〈 〉</button>
+            <button id="wrapCornerBracket">선택「 」</button>
         </section>
         <section class="original-text">
             <div class="title">수정 전</div>
@@ -28,7 +33,6 @@
             <div class="title">수정 후</div>
             <div id="outputText"></div>
         </section>
-
     </div>
 {% endblock content %}
 
