--- a/templates/index.html
+++ b/templates/index.html
@@ -17,13 +17,16 @@
             <button id="exclamation">!</button>
             <button id="bracket">()</button>
             <button id="triangleBracket">〈 〉</button>
+            <button id="doubleTriangleBracket">《 》</button>
             <button id="ellipsis">…</button>
             <button id="cornerBracket">「 」</button>
+            <button id="doubleCornerBracket">『 』</button>
             <button id="wrapBracket">선택( )</button>
             <button id="wrapQuoteBracket">선택“ ”</button>
             <button id="wrapSmallQuoteBracket">선택‘ ’</button>
             <button id="wrapTriangleBracket">선택〈 〉</button>
             <button id="wrapCornerBracket">선택「 」</button>
+            
         </section>
         <section class="original-text">
             <div class="title">수정 전</div>
