--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <span class="title blink">|</span>
             </div>
             <div class="menu">
-                <span class="inquiry">집단지성</span>
+                <a href="{{url_for('get_posts')}}" class="inquiry">집단지성</a>
             </div>
         </div>
     </header>
@@ -33,6 +33,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/bf37951062.js" crossorigin="anonymous"></script>
+    <script src="{{ url_for('static', filename='base.js') }}"></script>
 
     {% block extra_js %}
     {% endblock extra_js %}
