--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %} 
 
 {% block extra_css %}
-    <link rel="stylesheet" href="{{ url_for('static', filename='post_new.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/post_new.css') }}">
 {% endblock extra_css %}
 
 {% block content %}
@@ -16,5 +16,5 @@
 {% endblock content %}
 
 {% block extra_js %}
-    <script src="{{ url_for('static', filename='post_new.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/post_new.js') }}"></script>
 {% endblock extra_js %}
