--- a/templates/base.html
+++ b/templates/base.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clean up</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-    <link rel="icon" type="images/png" href="{{url_for('static', filename='logo.png')}}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
+    <link rel="icon" type="images/png" href="{{url_for('static', filename='image/logo.png')}}">
     {% block extra_css %}
     {% endblock extra_css %}
 </head>
@@ -33,7 +33,7 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/bf37951062.js" crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='base.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/base.js') }}"></script>
 
     {% block extra_js %}
     {% endblock extra_js %}
