맞춤법 검사 줄바꿈 처리, 검사 결과 replace로 바꾸지 않고 start, end 인덱스 활용해서 정확도 높이기

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
     <div class="content">
         <section class="function">
             <button id="copy"><i class="fa-solid fa-angles-left"></i></button>
+            <button id="paste">paste</button>
             <button id="grammar">맞춤법</button>
             <button id="tilde">~</button>
             <button id="english">(eng)</button>
