--- a/templates/post_new.html
+++ b/templates/post_new.html
@@ -10,6 +10,7 @@
         <div id="toPostList"><a href="{{url_for('get_posts')}}">toPostList</a></div>
         <textarea id="title"></textarea>
         <textarea type="text" id="content"></textarea>
+        <input type="text" id="username"></input>
         <input type="password" id="password"></input>
         <button id="submit">submit</button>
     </div>
