--- a/templates/post.html
+++ b/templates/post.html
@@ -5,8 +5,8 @@
 {% endblock extra_css %}
 
 {% block content %}
-    <div class="post-list">
-        <div id="toPostWrite"><a href="{{url_for('get_posts')}}">toPosts</a></div>
+    <div class="post-container">
+        <button class="get-posts-btn">toPosts</button>
         <button id="deletePost">삭제</button>
         <button id="updatePost">수정</button>
         
