--- a/templates/posts.html
+++ b/templates/posts.html
@@ -6,12 +6,12 @@
 
 {% block content %}
     <div class="post-list-container">
-        <h2>집단지성 : </h2>
+        <h2>집단지성 :</h2>
         <p>개선사항, 사용후기 등 자유롭게 글을 남겨주세요</p>
         <div class="post-list-header">
             <div class="search-box">
-                <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="제목 검색" class="search-input">
+                <div class="search-btn"><i class="fa-solid fa-magnifying-glass"></i></div>
             </div>
             <button class="post-write-btn">새 글 작성</button>
         </div>
