--- a/static/css/posts.css
+++ b/static/css/posts.css
@@ -9,6 +9,7 @@
 
 h2 {
     font-size: calc(var(--font-extra-large)*1.2);
+    color: var(--blue-dark-color);
 }
 
 p {
@@ -36,7 +37,7 @@ p {
     height: 35px;
     width: 320px;
 
-    padding-left: calc(var(--padding)*0.5);
+    padding: 0 var(--padding);
 
     border: 1px solid var(--grey-middle-color);
     border-radius: 5px;
@@ -52,6 +53,14 @@ p {
     font-weight: var(--font-medium-weight);
 
     height: 100%;
+}
+
+.search-btn {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    height: 100%;
+    width: 30px;
 }
 
 .search-box .search-input::placeholder {
